k8s/rancher/rancher.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: rancher
  namespace: private
subsets:
- addresses:
  - ip: 172.27.3.210
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
---
apiVersion: v1
kind: Service
metadata:
  name: rancher
  namespace: private
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: http
  - port: 443
    name: https
    protocol: TCP
    targetPort: https
