k8s/rancher/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rancher
  namespace: private
spec:
  rules:
  - host: rancher.baway.org.cn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rancher
            port:
              number: 80
  ingressClassName: nginx
